# UnravelEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  readd.sh
.cursor/rules/: clean-code.mdc  cpp.mdc  role.mdc
.github/workflows/: linux.yml  macos.yml  windows.yml
editor/editor/: CMakeLists.txt  editor.cpp  editor.h  events.h  main.cpp  shortcuts.h
editor/editor/assets/: asset_watcher.cpp  asset_watcher.h
editor/editor/deploy/: deploy.h
editor/editor/editing/: editing_manager.cpp  editing_manager.h  editor_actions.cpp  editor_actions.h  picking_manager.cpp  picking_manager.h  thumbnail_manager.cpp  thumbnail_manager.h
editor/editor/hub/: hub.cpp  hub.h
editor/editor/hub/panels/: dockspace.cpp  dockspace.h  entity_panel.cpp  entity_panel.h  panel.cpp  panel.h  panels_defs.h
editor/editor/hub/panels/animation_panel/: animation_panel.cpp  animation_panel.h
editor/editor/hub/panels/console_log_panel/: console_log_panel.cpp  console_log_panel.h
editor/editor/hub/panels/content_browser_panel/: content_browser_panel.cpp  content_browser_panel.h
editor/editor/hub/panels/deploy_panel/: deploy_panel.cpp  deploy_panel.h
editor/editor/hub/panels/editor_settings_panel/: editor_settings_panel.cpp  editor_settings_panel.h
editor/editor/hub/panels/footer_panel/: footer_panel.cpp  footer_panel.h
editor/editor/hub/panels/game_panel/: game_panel.cpp  game_panel.h
editor/editor/hub/panels/header_panel/: header_panel.cpp  header_panel.h
editor/editor/hub/panels/hierarchy_panel/: hierarchy_panel.cpp  hierarchy_panel.h
editor/editor/hub/panels/inspector_panel/: inspector_panel.cpp  inspector_panel.h
editor/editor/hub/panels/inspector_panel/inspectors/: inspector.cpp  inspector.h  inspector_alignment.cpp  inspector_alignment.h  inspector_assets.cpp  inspector_assets.h  inspector_basetypes.cpp  inspector_basetypes.h  inspector_coretypes.cpp  inspector_coretypes.h  inspector_entity.cpp  inspector_entity.h  inspector_layer.cpp  inspector_layer.h  inspector_light.cpp  inspector_light.h  inspector_math.cpp  inspector_math.h  inspector_physics_shape.cpp  inspector_physics_shape.h  inspector_prefab_component.cpp  inspector_prefab_component.h  inspector_resolution.cpp  inspector_resolution.h  inspector_script.cpp  inspector_script.h  inspectors.cpp  inspectors.h  property_path_generator.cpp  property_path_generator.h
editor/editor/hub/panels/project_settings_panel/: project_settings_panel.cpp  project_settings_panel.h
editor/editor/hub/panels/scene_panel/: scene_panel.cpp  scene_panel.h
editor/editor/hub/panels/scene_panel/gizmos/: gizmos_renderer.cpp  gizmos_renderer.h
editor/editor/hub/panels/scene_panel/gizmos/gizmos/: gizmo.h  gizmo_entity.cpp  gizmo_entity.h  gizmo_physics_component.cpp  gizmo_physics_component.h  gizmos.cpp  gizmos.h
editor/editor/hub/panels/statistics_panel/: statistics_panel.cpp  statistics_panel.h  statistics_utils.cpp  statistics_utils.h
editor/editor/hub/panels/style_panel/: style_panel.cpp  style_panel.h
editor/editor/imgui/: imgui_interface.cpp  imgui_interface.h
editor/editor/imgui/integration/: imgui.cpp  imgui.h  imgui_notify.h
editor/editor/imgui/integration/backend/: imgui_impl_ospp.cpp  imgui_impl_ospp.h
editor/editor/imgui/integration/shaders/: fs_imgui_cubemap_image.sc
editor/editor/meta/deploy/: deploy.cpp  deploy.hpp
editor/editor/meta/settings/: settings.cpp  settings.hpp
editor/editor/meta/system/: project_manager.cpp  project_manager.hpp
editor/editor/settings/: settings.h
editor/editor/system/: project_manager.cpp  project_manager.h
editor_data/compiled/shaders/: fs_grid.sc.asset.dx11  fs_grid.sc.asset.gl  fs_grid.sc.asset.spirv  fs_outline_detect.sc.asset.dx12  fs_outline_detect.sc.asset.gl  fs_outline_detect.sc.asset.spirv  fs_outline_mask.sc.asset.gl  fs_outline_mask.sc.asset.spirv  fs_picking_debugdraw_fill_texture.sc.asset.dx12  fs_picking_debugdraw_fill_texture.sc.asset.gl  fs_picking_debugdraw_fill_texture.sc.asset.spirv  fs_picking_id.sc.asset.dx11  fs_picking_id.sc.asset.gl  fs_picking_id.sc.asset.spirv  fs_wf_wireframe.sc.asset.dx12  fs_wf_wireframe.sc.asset.gl  fs_wf_wireframe.sc.asset.spirv  vs_clip_quad.sc.asset.spirv  vs_grid.sc.asset.dx11  vs_grid.sc.asset.gl  vs_grid.sc.asset.spirv  vs_outline_mask.sc.asset.dx12  vs_outline_mask.sc.asset.gl  vs_outline_mask.sc.asset.spirv  vs_outline_mask_skinned.sc.asset.gl  vs_picking_debugdraw_fill_texture.sc.asset.gl  vs_picking_id_skinned.sc.asset.dx11  vs_picking_id_skinned.sc.asset.spirv  vs_wf_wireframe.sc.asset.dx11  vs_wf_wireframe.sc.asset.gl  vs_wf_wireframe.sc.asset.spirv
editor_data/data/shaders/: fs_grid.sc  fs_outline_detect.io  fs_outline_detect.sc  fs_outline_mask.sc  fs_picking_debugdraw_fill_texture.sc  vs_clip_quad.io
engine/core/: CMakeLists.txt
engine/core/base/: basetypes.hpp
engine/core/cmd_line/: parser.cpp  parser.h
engine/core/context/: context.hpp
engine/core/filesystem/: cache.hpp  (+6 more)
engine/core/graphics/: CMakeLists.txt  debugdraw.cpp  debugdraw.h  format.cpp  format.h  frame_buffer.cpp  frame_buffer.h  graphics.cpp  graphics.h  handle_impl.h
engine/core/graphics/utils/: cube_atlas.cpp  cube_atlas.h  shaderlib.sh
engine/core/graphics/utils/debugdraw/: debugdraw.cpp  debugdraw.h
engine/core/graphics/utils/font/: font_manager.cpp  font_manager.h  sdf.h  text_buffer_manager.cpp  text_buffer_manager.h  text_metrics.cpp  text_metrics.h
engine/core/seq/: CMakeLists.txt  seq.cpp  seq.h  seq_action.cpp  seq_action.h  seq_common.h  seq_core.cpp  seq_core.h  seq_core.hpp  seq_ease.cpp  seq_ease.h  seq_ex.h  seq_inspector.cpp  seq_inspector.h  seq_manager.cpp  seq_manager.h  seq_math.cpp  seq_math.h  seq_math.hpp  seq_private.h  seq_updater.h
engine/core/seq/detail/: seq_internal.cpp  seq_internal.h
engine/core/seq/tests/: tests.cpp  tests.h  tests_helper.cpp  tests_helper.h
engine/engine/: CMakeLists.txt  engine.cpp  engine.h  events.cpp  events.h  pch.h
game/game/: CMakeLists.txt  game.cpp  game.h  main.cpp
game/game/runner/: runner.cpp  runner.h
rc/: AceEngine.rc  UnravelEngine.rc
(+402 files in other folders)
